docs/vocabulary/_sources/type/Chapter/v1/index.rst.txt
:orphan:

Chapter (v1)
============

.. warning::
   This is not the latest version. The latest version is :doc:`v6 <../v6/index>`.

- **Previous Version:** none *(this is the oldest version)*
- **URI:** `http://clams.ai/vocabulary/type/Chapter/v1 <http://clams.ai/vocabulary/type/Chapter/v1>`_
- **Shortname:** ``Chapter``
- **Inherits from:** :doc:`TimeFrame (v1) <../../TimeFrame/v1/index>`
- **Included in:** :doc:`1.0.0 <../../../1.0.0/index>`
- **Also Known As:** This type is also accessible at the following legacy URLs for backward compatibility:

  - `http://mmif.clams.ai/vocabulary/Chapter/v1 <http://mmif.clams.ai/vocabulary/Chapter/v1>`_
  - `http://mmif.clams.ai/0.4.0/vocabulary/Chapter/ <http://mmif.clams.ai/0.4.0/vocabulary/Chapter/>`_
  - `http://mmif.clams.ai/0.4.1/vocabulary/Chapter/ <http://mmif.clams.ai/0.4.1/vocabulary/Chapter/>`_
  - `http://mmif.clams.ai/0.4.2/vocabulary/Chapter/ <http://mmif.clams.ai/0.4.2/vocabulary/Chapter/>`_

Description
-----------

Example case for when we do not want to use Segment with a specific segmentType or if we want to introduce special properties.


Properties
----------

Synopsis
^^^^^^^^

*Properties marked with* **\*** *are required.*

.. list-table::
   :header-rows: 1
   :widths: 40 40 20
   :align: left

   * - Property
     - Type
     - Origin
   * - :ref:`Chapter-v1-title`
     - string
     - *native*
   * - :ref:`Chapter-v1-frameType`
     - string
     - :doc:`TimeFrame (v1) <../../TimeFrame/v1/index>`
   * - :ref:`Chapter-v1-end`
     - integer
     - :doc:`Interval (v1) <../../Interval/v1/index>`
   * - :ref:`Chapter-v1-start`
     - integer
     - :doc:`Interval (v1) <../../Interval/v1/index>`
   * - :ref:`Chapter-v1-targets`
     - array of string
     - :doc:`Interval (v1) <../../Interval/v1/index>`
   * - :ref:`Chapter-v1-timeUnit`
     - string
     - :doc:`Region (v1) <../../Region/v1/index>`
   * - :ref:`Chapter-v1-document`
     - string
     - :doc:`Annotation (v2) <../../Annotation/v2/index>`
   * - :ref:`Chapter-v1-id` **\***
     - string
     - :doc:`Thing (v1) <../../Thing/v1/index>`


Native
^^^^^^


.. _Chapter-v1-title:

``title``
"""""""""

- type: *string*
- required: no

Title of the chapter

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`TimeFrame (v1) <../../TimeFrame/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _Chapter-v1-frameType:

``frameType``
"""""""""""""

- type: *string*
- required: no

The type of TimeFrame. Could be bars-and-tones, speech, noise, music, other.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Interval (v1) <../../Interval/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _Chapter-v1-end:

``end``
"""""""

- type: *integer*
- required: no

The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _Chapter-v1-start:

``start``
"""""""""

- type: *integer*
- required: no

The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _Chapter-v1-targets:

``targets``
"""""""""""

- type: *array of string*
- required: no

IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation).

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Region (v1) <../../Region/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _Chapter-v1-timeUnit:

``timeUnit``
""""""""""""

- type: *string*
- required: no

Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Annotation (v2) <../../Annotation/v2/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _Chapter-v1-document:

``document``
""""""""""""

- type: *string*
- required: no

The identifier of the document that the annotation is over.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Thing (v1) <../../Thing/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _Chapter-v1-id:

``id``
""""""

- type: *string*
- required: yes

A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       },
       "start": {
         "type": "integer",
         "description": "The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "end": {
         "type": "integer",
         "description": "The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "targets": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation)."
       },
       "frameType": {
         "type": "string",
         "description": "The type of TimeFrame. Could be bars-and-tones, speech, noise, music, other."
       },
       "title": {
         "type": "string",
         "description": "Title of the chapter"
       }
     },
     "required": [
       "id"
     ],
     "type": "object"
   }